--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.CloudStorage_Android" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.CloudStorage_Android" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -15,8 +15,9 @@
     </style>
 
     <style name="Theme.CloudStorage_Android.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/white</item>
     </style>
 
     <style name="Theme.CloudStorage_Android.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
